# tron1-rl-deploy-arm

./: README.md
airbot-sdk-2.9/: CMakeLists.txt  package.xml
airbot-sdk-2.9/include/airbot/: airbot.hpp  utils.hpp
airbot-sdk-2.9/include/airbot/libraries/: atomic_queue.h  defs.h
airbot-sdk-2.9/include/airbot/modules/boards/: interface_board_base.hpp  interface_board_end.hpp
airbot-sdk-2.9/include/airbot/modules/controller/: ik_analytic.hpp  ikv.hpp
airbot-sdk-2.9/include/airbot/modules/motors/: encoder_driver.hpp  gripper485_motor_driver.hpp  motor_driver.hpp  od_motor_driver.hpp  oid_motor_driver.hpp
airbot-sdk-2.9/lib/cmake/airbot_play/: airbot_playTargets-release.cmake  airbot_playVersion.cmake
airbot-sdk-2.9/lib/cmake/httplib/: httplibConfigVersion.cmake  httplibTargets.cmake
airbot-sdk-2.9/lib/pkgconfig/: airbot_models.pc
airbot-sdk-2.9/lib/python3/dist-packages/airbot_manufacture/: __init__.py
airbot_msgs/: CMakeLists.txt  package.xml
pointfoot-gazebo-ros/pointfoot_gazebo/: package.xml
pointfoot-sdk-lowlevel/python3/aarch64/: build.py
pointfoot-sdk-lowlevel/python3/aarch64/limxsdk/robot/: Robot.py
pointfoot-sdk-lowlevel/python3/win/limxsdk/robot/: Joystick.py  _robot.lib
robot_controllers/: package.xml
robot_controllers/config/pointfoot/SF_TRON1A/: params.yaml
robot_controllers/config/pointfoot/SF_TRON1A/policy/: encoder.onnx
robot_controllers/config/pointfoot/WF_TRON1A/: params.yaml
robot_controllers/src/: WheelfootController.cpp
robot_hw/: CMakeLists.txt
robot_hw/include/robot_hw/: PointfootHW.h
robot_hw/launch/: pointfoot_hw.launch
src/airbot-sdk-2.9/include/airbot/command/: command_base.hpp  command_types.hpp
src/airbot-sdk-2.9/include/airbot/drivers/: SocketCAN.hpp
src/airbot-sdk-2.9/include/airbot/modules/: modules.hpp
src/airbot-sdk-2.9/include/airbot/modules/boards/: board_driver.hpp
src/airbot-sdk-2.9/include/airbot/modules/controller/: chain.hpp  fk.hpp  fk_analytic.hpp  id.hpp  id_chain_rne.hpp  ik.hpp  ikv_chain.hpp
src/airbot-sdk-2.9/include/airbot/modules/motors/: dm_motor_driver.hpp
src/airbot-sdk-2.9/include/airbot/modules/tools/timer/: timer.hpp
src/airbot-sdk-2.9/lib/: libairbot_play.so.2.9  libairbot_play.so.2.9.0
src/airbot-sdk-2.9/lib/cmake/airbot_play/: airbot_playConfig.cmake  airbot_playTargets.cmake
src/airbot-sdk-2.9/lib/pkgconfig/: kdl_parser.pc
src/airbot-sdk-2.9/lib/python3/dist-packages/airbot_manufacture/: test_can.py
src/airbot-sdk-2.9/lib/python3/dist-packages/airbot_play/: iap_burn.py
src/airbot_msgs/msg/: ArmCmd.msg  ArmState.msg
src/onnxruntime_sdk/: CMakeLists.txt  package.xml
src/pointfoot-gazebo-ros/pointfoot_gazebo/: CMakeLists.txt
src/pointfoot-gazebo-ros/pointfoot_gazebo/include/pointfoot_gazebo/: PointFootHWSim.h
src/pointfoot-gazebo-ros/pointfoot_gazebo/src/: PointFootHWSim.cpp
src/pointfoot-sdk-lowlevel/python3/amd64/limxsdk/robot/: RobotType.py
src/pointfoot-sdk-lowlevel/python3/win/: limxsdk-1.0.6-py3-none-any.whl
src/robot-description/: CMakeLists.txt
src/robot-description/pointfoot/SF_TRON1A/urdf/: robot_with_arm.urdf
src/robot-description/pointfoot/WF_TRON1A/urdf/: robot_with_arm.urdf
src/robot_controllers/: CMakeLists.txt  robot_controllers_plugins.xml
src/robot_controllers/config/: controllers.yaml
src/robot_controllers/config/pointfoot/SF_TRON1A/policy/: encoder.onnx  policy.onnx
src/robot_controllers/config/pointfoot/WF_TRON1A/policy/: encoder.onnx  policy.onnx
src/robot_controllers/include/robot_controllers/: ControllerBase.h  SolefootController.h  WheelfootController.h
src/robot_controllers/src/: ControllerBase.cpp  SolefootController.cpp  WheelfootController.cpp
src/robot_hw/: CMakeLists.txt  package.xml
src/robot_hw/include/robot_hw/: PointfootHW.h
src/robot_hw/launch/: pointfoot_hw.launch  pointfoot_hw_sim.launch
src/robot_hw/src/: PointfootHW.cpp  RobotHWLoop.cpp
