<?xml version="1.0"?>
<package>
  <name>airbot_msgs</name>
  <version>1.0.0</version>
  <description>The airbot_msgs package</description>
  <maintainer email="fupinjun@limxdynamics.com">pinkie.fu</maintainer>
  <author email="fupinjun@limxdynamics.com">pinkie.fu</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
